# DiffDock

./: MODAL-PORT.md  README.md  app.py  modal-app.py  porting-notes.txt  prepare.py  pyproject.toml
diffdock-repo/: default_inference_args.yaml  pyproject.toml
diffdock-repo/data/: dockgen  dockgen.json  hps.json  inputs.json
diffdock-repo/data/DockGen/: split_val.txt
diffdock-repo/data/dockgen/: split_test.txt
diffdock-repo/src/diffdock/: inference.py  prepare.py
diffdock-repo/src/diffdock/datasets/: parse_chi.py  pdb.py  process_mols.py
diffdock-repo/src/diffdock/models/: old_aa_model.py  old_cg_model.py
diffdock-repo/src/diffdock/spyrmsd/: graph.py  io.py  molecule.py
diffdock-repo/src/diffdock/utils/: inference_utils.py  precompute_series.py  so3.py  so3_new.py  torsion.py  torus.py  utils.py
src/diffdock/: inference.py
src/diffdock/confidence/: confidence_train.py  dataset.py
src/diffdock/datasets/: esm_embedding_preparation.py  loader.py  moad.py  pdbbind.py
src/diffdock/models/: aa_model.py  cg_model.py  tensor_layers.py
src/diffdock/spyrmsd/: __main__.py  rmsd.py
src/diffdock/utils/: diffusion_utils.py  gnina_utils.py  inference_utils.py  molecules_utils.py  sampling.py  so3.py  training.py
